--- a/Gestion_Citoyen/rs.qrc
+++ b/Gestion_Citoyen/rs.qrc
@@ -13,5 +13,7 @@
         <file>12.jpg</file>
         <file>13.jpg</file>
         <file>16.jpg</file>
+        <file>17.jpg</file>
+        <file>18.jpg</file>
     </qresource>
 </RCC>
