--- a/gestion_Citoyen_Recompense/RSC.qrc
+++ b/gestion_Citoyen_Recompense/RSC.qrc
@@ -12,5 +12,6 @@
         <file>16.jpg</file>
         <file>18.jpg</file>
         <file>17.jpg</file>
+        <file>21.jpg</file>
     </qresource>
 </RCC>
