--- a/gestion_Citoyen_Recompense/mainwindow.ui
+++ b/gestion_Citoyen_Recompense/mainwindow.ui
@@ -157,7 +157,7 @@ font: 15pt &quot;Rockwell&quot;;</string>
 font: 15pt &quot;Rockwell&quot;;</string>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="ongletCit">
        <attribute name="title">
@@ -302,7 +302,7 @@ font: 15pt &quot;Rockwell&quot;;</string>
         <property name="currentIndex">
          <number>3</number>
         </property>
-        <widget class="QWidget" name="ajouteremp">
+        <widget class="QWidget" name="ajouterCit">
          <attribute name="title">
           <string>Ajouter</string>
          </attribute>
@@ -2638,8 +2638,8 @@ color:rgb(12, 166, 97);</string>
           <widget class="QLineEdit" name="activite_2">
            <property name="geometry">
             <rect>
-             <x>780</x>
-             <y>210</y>
+             <x>770</x>
+             <y>130</y>
              <width>113</width>
              <height>31</height>
             </rect>
@@ -2648,36 +2648,11 @@ color:rgb(12, 166, 97);</string>
           <widget class="QLineEdit" name="nbrPts">
            <property name="geometry">
             <rect>
-             <x>780</x>
-             <y>290</y>
+             <x>770</x>
+             <y>210</y>
              <width>113</width>
              <height>31</height>
             </rect>
-           </property>
-          </widget>
-          <widget class="QLineEdit" name="prenom_2">
-           <property name="geometry">
-            <rect>
-             <x>220</x>
-             <y>280</y>
-             <width>113</width>
-             <height>31</height>
-            </rect>
-           </property>
-           <property name="font">
-            <font>
-             <family>Rockwell</family>
-             <pointsize>15</pointsize>
-             <weight>50</weight>
-             <italic>false</italic>
-             <bold>false</bold>
-            </font>
-           </property>
-           <property name="dragEnabled">
-            <bool>true</bool>
-           </property>
-           <property name="readOnly">
-            <bool>true</bool>
            </property>
           </widget>
           <widget class="QLabel" name="label_22">
@@ -2757,8 +2732,8 @@ color:rgb(12, 166, 97);</string>
           <widget class="QComboBox" name="comboBox_2">
            <property name="geometry">
             <rect>
-             <x>780</x>
-             <y>130</y>
+             <x>770</x>
+             <y>80</y>
              <width>111</width>
              <height>31</height>
             </rect>
@@ -2777,9 +2752,39 @@ color:rgb(12, 166, 97);</string>
           <widget class="QComboBox" name="comboBox_3">
            <property name="geometry">
             <rect>
+             <x>790</x>
+             <y>430</y>
+             <width>111</width>
+             <height>31</height>
+            </rect>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="prenom_2">
+           <property name="geometry">
+            <rect>
+             <x>220</x>
+             <y>281</y>
+             <width>113</width>
+             <height>31</height>
+            </rect>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="lineEdit_9">
+           <property name="geometry">
+            <rect>
+             <x>770</x>
+             <y>290</y>
+             <width>113</width>
+             <height>31</height>
+            </rect>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="lineEdit_10">
+           <property name="geometry">
+            <rect>
              <x>780</x>
              <y>370</y>
-             <width>111</width>
+             <width>113</width>
              <height>31</height>
             </rect>
            </property>
@@ -3120,7 +3125,7 @@ color:rgb(212, 139, 97);</string>
          <bool>true</bool>
         </property>
         <property name="currentIndex">
-         <number>2</number>
+         <number>1</number>
         </property>
         <widget class="QWidget" name="ajoutercong">
          <attribute name="title">
@@ -5190,26 +5195,6 @@ color:rgb(103, 161, 255);
             <string>NomRec</string>
            </property>
           </widget>
-          <widget class="QLineEdit" name="nomRec">
-           <property name="geometry">
-            <rect>
-             <x>230</x>
-             <y>150</y>
-             <width>113</width>
-             <height>20</height>
-            </rect>
-           </property>
-          </widget>
-          <widget class="QLineEdit" name="nbrEx_2">
-           <property name="geometry">
-            <rect>
-             <x>230</x>
-             <y>210</y>
-             <width>113</width>
-             <height>20</height>
-            </rect>
-           </property>
-          </widget>
           <widget class="QLabel" name="label_id_3">
            <property name="geometry">
             <rect>
@@ -5232,21 +5217,11 @@ color:rgb(103, 161, 255);
             <string>NumRec</string>
            </property>
           </widget>
-          <widget class="QComboBox" name="numRec_2">
-           <property name="geometry">
-            <rect>
-             <x>230</x>
-             <y>90</y>
-             <width>111</width>
-             <height>22</height>
-            </rect>
-           </property>
-          </widget>
           <widget class="QLabel" name="label_30">
            <property name="geometry">
             <rect>
              <x>50</x>
-             <y>250</y>
+             <y>260</y>
              <width>101</width>
              <height>31</height>
             </rect>
@@ -5258,19 +5233,19 @@ color:rgb(103, 161, 255);
           <widget class="QLineEdit" name="nbrPts_2">
            <property name="geometry">
             <rect>
-             <x>230</x>
-             <y>260</y>
-             <width>113</width>
-             <height>20</height>
+             <x>190</x>
+             <y>320</y>
+             <width>191</width>
+             <height>111</height>
             </rect>
            </property>
           </widget>
           <widget class="QLabel" name="label_36">
            <property name="geometry">
             <rect>
-             <x>10</x>
-             <y>310</y>
-             <width>161</width>
+             <x>20</x>
+             <y>340</y>
+             <width>151</width>
              <height>41</height>
             </rect>
            </property>
@@ -5281,10 +5256,10 @@ color:rgb(103, 161, 255);
           <widget class="QLineEdit" name="lineEdit_6">
            <property name="geometry">
             <rect>
-             <x>180</x>
-             <y>310</y>
-             <width>201</width>
-             <height>121</height>
+             <x>230</x>
+             <y>270</y>
+             <width>111</width>
+             <height>21</height>
             </rect>
            </property>
           </widget>
@@ -5315,6 +5290,36 @@ color:rgb(12, 166, 97);</string>
            </property>
            <property name="text">
             <string>modifier</string>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="lineEdit_8">
+           <property name="geometry">
+            <rect>
+             <x>230</x>
+             <y>90</y>
+             <width>113</width>
+             <height>22</height>
+            </rect>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="nomRec">
+           <property name="geometry">
+            <rect>
+             <x>230</x>
+             <y>150</y>
+             <width>113</width>
+             <height>22</height>
+            </rect>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="nbrEx_2">
+           <property name="geometry">
+            <rect>
+             <x>230</x>
+             <y>210</y>
+             <width>113</width>
+             <height>22</height>
+            </rect>
            </property>
           </widget>
          </widget>
@@ -5418,16 +5423,6 @@ color:rgb(255, 255, 255);</string>
             <pixmap>../../smartshop2A18-gestion-employ-scong-s/Documents/temp/154381946_1831634480335042_4446684979299693543_n.jpg</pixmap>
            </property>
           </widget>
-          <widget class="QComboBox" name="suppRec">
-           <property name="geometry">
-            <rect>
-             <x>270</x>
-             <y>110</y>
-             <width>141</width>
-             <height>41</height>
-            </rect>
-           </property>
-          </widget>
           <widget class="QPushButton" name="pushButton">
            <property name="geometry">
             <rect>
@@ -5454,11 +5449,21 @@ color:rgb(255, 255, 255);</string>
             <string>NumRec</string>
            </property>
           </widget>
+          <widget class="QLineEdit" name="lineEdit_11">
+           <property name="geometry">
+            <rect>
+             <x>220</x>
+             <y>110</y>
+             <width>131</width>
+             <height>31</height>
+            </rect>
+           </property>
+          </widget>
           <zorder>label_46</zorder>
           <zorder>label_43</zorder>
-          <zorder>suppRec</zorder>
           <zorder>pushButton</zorder>
           <zorder>label_37</zorder>
+          <zorder>lineEdit_11</zorder>
          </widget>
          <widget class="QLabel" name="label_47">
           <property name="geometry">
@@ -5874,7 +5879,7 @@ color:rgb(103, 161, 255);
           <rect>
            <x>82</x>
            <y>90</y>
-           <width>101</width>
+           <width>141</width>
            <height>41</height>
           </rect>
          </property>
@@ -5889,9 +5894,9 @@ color:rgb(255, 250, 190);</string>
         <widget class="QPushButton" name="pushButton_4">
          <property name="geometry">
           <rect>
-           <x>250</x>
+           <x>310</x>
            <y>90</y>
-           <width>101</width>
+           <width>151</width>
            <height>41</height>
           </rect>
          </property>
@@ -5903,29 +5908,12 @@ color:rgb(255, 250, 190);</string>
           <string>Play</string>
          </property>
         </widget>
-        <widget class="QPushButton" name="pushButton_5">
-         <property name="geometry">
-          <rect>
-           <x>410</x>
-           <y>90</y>
-           <width>101</width>
-           <height>41</height>
-          </rect>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">background-color: qlineargradient(spread:pad, x1:1, y1:0, x2:1, y2:0, stop:0.919598 rgba(255, 97, 97), stop:0.98 rgba(0, 0, 0, 255), stop:1 rgba(235, 148, 61, 255));
-color:rgb(255, 250, 190);</string>
-         </property>
-         <property name="text">
-          <string>Pause</string>
-         </property>
-        </widget>
         <widget class="QPushButton" name="pushButton_6">
          <property name="geometry">
           <rect>
-           <x>570</x>
+           <x>540</x>
            <y>90</y>
-           <width>101</width>
+           <width>141</width>
            <height>41</height>
           </rect>
          </property>
@@ -5942,7 +5930,7 @@ color:rgb(255, 250, 190);</string>
           <rect>
            <x>77</x>
            <y>210</y>
-           <width>611</width>
+           <width>631</width>
            <height>31</height>
           </rect>
          </property>
@@ -5955,7 +5943,7 @@ color:rgb(255, 250, 190);</string>
           <rect>
            <x>90</x>
            <y>320</y>
-           <width>101</width>
+           <width>131</width>
            <height>41</height>
           </rect>
          </property>
