--- a/gestion_Citoyen_Recompense/RSC.qrc
+++ b/gestion_Citoyen_Recompense/RSC.qrc
@@ -13,5 +13,7 @@
         <file>18.jpg</file>
         <file>17.jpg</file>
         <file>21.jpg</file>
+        <file>23.jpg</file>
+        <file>24.jpg</file>
     </qresource>
 </RCC>
