valeur ajoutée + design

--- a/gestion_Citoyen_Recompense/RSC.qrc
+++ b/gestion_Citoyen_Recompense/RSC.qrc
@@ -15,5 +15,10 @@
         <file>21.jpg</file>
         <file>23.jpg</file>
         <file>24.jpg</file>
+        <file>25.jpg</file>
+        <file>unnamed.png</file>
+        <file>28.png</file>
+        <file>29.jpg</file>
+        <file>30.jpg</file>
     </qresource>
 </RCC>
